--- a/client/src/styles/AnalyzeType.css
+++ b/client/src/styles/AnalyzeType.css
@@ -1,67 +1,72 @@
-/*#presentation-back{
-background: url(/public/background-img.png);
-}*/
-#presentation-type{
+#type-container {
    margin-left: 20%;
-   margin-right:20%;
-   margin-top: 2%;
-}
-
-#info-type-one{
-  margin-left: 20%;
-  margin-right: 20%;
-  width: 60%;
-  display: inline-block;
-  text-align: center;
- /*background-color: rgba(249, 184, 184, 0.25);*/
-  background-color: rgba(237, 242, 95, 0.1);
-  border-radius: 8%;
-  color: black;
-  text-decoration: none;
-}
-
-#type-title{
-   font-size: 25pt;
+   margin-right: 20%;
    margin-top: 10%;
+   display: flex;
+   justify-content: center;
+   height: 400px;
 }
 
-#type-explain{
-   font-size: 12pt;
+#info-type-one {
+   margin-right: 5px;
+   margin-left: 5px;
+   width:400px;
+   height: 300px;
+   display: inline-block;
+   text-align: center;
+   background-color: #FFF5EB;
+   /* #FEF5ED; #FFF5EB */
+   border-radius: 8%;
+   color: black;
+   text-decoration: none;
+}
+
+#info-type-two {
+   margin-right: 5px;
+   margin-left: 30px;
+   width:400px;
+   height: 300px;
+   display: inline-block;
+   text-align: center;
+   background-color: #EFF8FF;
+   border-radius: 8%;
+   color: black;
+   text-decoration: none;
+}
+
+#type-title {
+   font-size: 23pt;
+   margin-top: 25px;
+   margin-bottom: 20px;
+}
+
+#type-explain {
+   font-size: 13pt;
    white-space: pre-line;
    margin-bottom: 10%;
+   margin-left: 40px;
+   margin-right: 40px;
+   margin-top: 10px;
 }
 
-/*#info-type-two{
-  margin-right: 2%;
-  width: 32%;
-  display: inline-block;
-  text-align: center;
-  background-color: rgba(240, 124, 66, 0.17);
-  border-radius: 8%;
-  color: black;
-  text-decoration: none;
-}*/
-
-#info-type-two{
-  margin-left: 20%;
-  margin-right: 20%;
-  margin-top: 3%;
-  width: 60%;
-  display: inline-block;
-  text-align: center;
-  background-color: rgba(95, 181, 242, 0.1);
-  border-radius: 8%;
-  color: black;
-  text-decoration: none;
+.image1 {
+   margin-top: 40px;
+   width: 70px;
+   height: 70px;
+   display: inline-block;
+   background-image: url(/public/img1.png);
+   background-size: contain;
+   background-repeat: no-repeat;
+   background-position: center;
 }
 
-/*#info-type-four{
-  margin-right: 2%;
-  width: 32%;
-  display: inline-block;
-  text-align: center;
-  border-radius: 8%;
-  color: black;
-  text-decoration: none;
+.image2 {
+   margin-top: 40px;
+   width: 70px;
+   height: 70px;
+   display: inline-block;
+   background-image: url(/public/img2.png);
+   background-size: contain;
+   background-repeat: no-repeat;
+   background-position: center;
 }
-*/
