--- a/client/src/styles/Question.css
+++ b/client/src/styles/Question.css
@@ -1,126 +1,187 @@
-.Question{
-    width:92%;
-    display:flex;
-    margin:0% 4% 4% 4%;
+.Question {
+  width: 92%;
+  display: flex;
+  margin: 0% 4% 4% 4%;
 }
 
 /* Home Page Container */
 .question__container {
-    width: 60%;
-    /* height:80%; */
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    padding-top: 150px;
-  }
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding-top: 150px;
+}
+
+.category_contatiner{
+  background-color: #F7F7F7;
+  border-radius: 15px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;    
+}
+
+.cateheader{
+  font-weight: bold;
+  padding: 15px;
+  padding-bottom: 20px;
+  margin-top: 10px;
+  font-size: 18px;
+  border-bottom: 3px solid white;
+  margin-bottom: 0;
+}
+.catediv{  
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  padding-top: 10px;
+  padding-bottom:10px;
+}
+.cate{
+  font-size: 17px;
+  margin-right: 30px;
+  height: 70px;
+  width: 100px;
+  border-radius: 10px;
+  color:#2B2B2B;
+  /* color: #FFFFFF; */
+  border: 0px;
+  background-color: transparent;
+  /* background-color: rgba(248, 182, 150, 0.98);   */
+}
+.cate:hover{
+  color: rgba(244, 131, 102, 0.98);
+  background-color: white;
+}
+.cateheader{
+  font-weight: bold;
+  font-size: 18px;
+}
+
+/* #cate1 {
+}
+#cate2 {
+}
+#cate3 {
+}
+#cate4 {
+}
+#cate5 {
+} */
 
 /* Input Box */
 .inputbox {
-    width: 100%;
-    display: flex;
-    align-items: center;
-  }
-  .inputbox-input {
-    height:500px;
-    flex: 1;
-    border: none;
-    border-bottom: 1px solid #f1f3f5;
-    padding: 10px;
-    height: 50px;
-    box-sizing: border-box;
-    font-size:15px;
-  }
-  .inputbox-input:focus {
-    outline: none;
-  }
-  .inputbox-submit-btn {
-    border: none;
-    border-radius: 10px;
-    background-color: #d0ebff;
-    color: #1c7ed6;
-    height: 50px;
-    width: 100px;
-    font-weight: bold;
-  }
-  
-  /* Question Item List */
-  .list {
-    background-color: #F7F7F7;
-    border-radius: 15px;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column; 
-  }
-  .list-title {
-    font-weight: bold;
-    padding:15px;
-    padding-bottom: 20px;
-    margin-top: 10px;
-    font-size: 20px;
-    border-bottom: 3px solid white;
-    margin-bottom: 0;
-  }
-  .list-ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    height: 800px;
-  }
-  
-  /* Question Item */
-  .item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-    height: 40px;
-    border-bottom: 1px solid #F0F0F0; 
-  }
-  .item:last-child {
-    margin-bottom: 0;
-  }
-  .item-checkbox {
-    margin-right: 10px;
-  }
-  .item-edit-input {
-    flex: 1;
-    border: none;
-    border-bottom: 1px solid #f1f3f5;
-    padding: 5px;
-    font-size: 1em;
-    color:#f48366;
-    box-sizing: border-box;
-    background-color: inherit;
-    margin-left: 5px;
-  }
-  .item-edit-input:focus {
-    outline: none;
-  }
-  .item-ctx {
-    flex: 1;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-  .item-ctx-checked {
-    font-style: italic;
-    text-decoration: line-through;
-    color: #868e96;
-  }
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
 
-  .item-edit-btn,
-  .item-delete-btn {
-    border: none;
-    border-radius: 0;
-    background-color: inherit;
-    margin-right: 10px;
-  }
-  .item-edit-btn:hover,
-  .item-delete-btn:hover {
-    cursor: pointer;
-    background-color: #d0ebff;
-    border-radius: 10px;
-   
-  }
-  .item-edit-btn {
-    margin-right: 3px;
-  } 
+.inputbox-input {
+  height: 500px;
+  flex: 1;
+  border: none;
+  border-bottom: 1px solid #f1f3f5;
+  border-radius: 10px;
+  padding: 10px;
+  height: 50px;
+  box-sizing: border-box;
+  font-size: 15px;
+}
+
+.inputbox-input:focus {
+  outline: none;
+}
+
+.inputbox-submit-btn {
+  border: none;
+  border-radius: 10px;
+  background-color: #d0ebff;
+  color: #1c7ed6;
+  height: 50px;
+  width: 100px;
+  font-weight: bold;
+}
+.inputbox-submit-btn:hover {
+  background-color: white;
+  color: #1c7ed6;
+  border: 2px solid #d0ebff;
+}
+
+/* Question Item List */
+.list {
+  background-color: #F7F7F7;
+  border-radius: 15px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.list-title {
+  font-weight: bold;
+  padding: 15px;
+  padding-bottom: 20px;
+  margin-top: 10px;
+  font-size: 18px;
+  border-bottom: 3px solid white;
+  margin-bottom: 0;
+}
+
+.list-ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  height: 800px;
+}
+
+/* Question Item */
+.item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  border-bottom: 1.5px solid #F0F0F0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.item:last-child {
+  margin-bottom: 0;
+}
+
+.item-edit-input {
+  flex: 1;
+  border: none;
+  border-bottom: 1px solid #f1f3f5;
+  padding: 5px;
+  font-size: 1em;
+  color: #f48366;
+  box-sizing: border-box;
+  background-color: inherit;
+  margin-left: 5px;
+}
+
+.item-edit-input:focus {
+  outline: none;
+}
+
+.item-ctx {
+  flex: 1;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.item-edit-btn,
+.item-delete-btn {
+  border: none;
+  border-radius: 0;
+  background-color: inherit;
+  margin-right: 10px;
+}
+
+.item-edit-btn:hover,
+.item-delete-btn:hover {
+  cursor: pointer;
+  background-color: #d0ebff;
+  border-radius: 5px;
+}
