--- a/client/src/styles/Question.css
+++ b/client/src/styles/Question.css
@@ -57,7 +57,21 @@
   border: 0px;
   background-color: transparent;
   /* background-color: rgba(248, 182, 150, 0.98);   */
+ 
 }
+
+.cateactive{
+  font-size: 17px;
+  margin-right: 30px;
+  height: 70px;
+  width: 100px;
+  border-radius: 10px;
+  color:rgba(244, 131, 102, 0.98);
+  border: 0px;
+  background-color: white;
+}
+
+
 .cate:hover{
   color: rgba(244, 131, 102, 0.98);
   background-color: white;
