--- a/client/src/styles/Result.css
+++ b/client/src/styles/Result.css
@@ -1,7 +1,201 @@
 .Result{
     width:92%;
     height:90vh;
-    display:flex;
+    /*display:flex;*/
+    overflow-y: auto;
+    overflow-x: hidden;
     padding-top: 100px;
     margin:0% 4% 4% 4%;
 }
+
+#title {
+width: 100%;
+height: 10%;
+margin-top: 2%;
+margin-left: 1.5%;
+margin-right: 1.5%;
+color: #5a5a5a;
+}
+
+#area {
+margin-top: 2%;
+margin-bottom: 2%;
+}
+
+#question{
+width: 100%;
+margin-top: 1.5%;
+margin-left: 1%;
+color: #8c8c8c;
+font-weight: bold;
+}
+
+#quesList{
+margin-left: 2%;
+margin-bottom: 2%;
+}
+
+#quesContent{
+display: inline;
+margin-left: 0;
+padding-left: 0;
+}
+
+#vision{
+width: 100%;
+height: 17.5%;
+margin-bottom: 5%;
+}
+
+#interviewVideo{
+float: left;
+margin-left: 5%;
+width: 35%;
+height: 100%;
+background: #FFE6E6;
+margin-right: 5%;
+}
+
+#emotionGraph{
+float: right;
+width: 35%;
+height: 100%;
+background: #FDF5DC;
+margin-right: 5%;
+}
+
+#voice{
+width: 100%;
+height: 17.5%;
+margin-bottom: 5%;
+}
+
+#one{
+float: left;
+margin-left: 5%;
+width: 35%;
+height: 100%;
+background: #FFE6E6;
+margin-right: 5%;
+}
+
+#two{
+float: right;
+width: 35%;
+height: 100%;
+background: #FDF5DC;
+margin-right: 5%;
+}
+
+#word{
+width: 100%;
+height: 17.5%;
+margin-bottom: 5%;
+}
+
+#explain {
+margin-left: 2%;
+margin-bottom: 4%;
+color: #a0a0a0;
+font-weight: bold;
+}
+
+#three{
+float: left;
+margin-left: 5%;
+width: 35%;
+height: 100%;
+background: #FFEAD0;
+margin-right: 5%;
+margin-bottom: 2%;
+}
+
+#four{
+float: right;
+width: 35%;
+height: 100%;
+background: #EBFFEB;
+margin-right: 5%;
+}
+
+#pitch{
+width: 100%;
+height: 17.5%;
+margin-bottom: 5%;
+}
+
+#five{
+float: left;
+margin-left: 5%;
+width: 35%;
+height: 100%;
+background: #E0EBFF;
+margin-right: 5%;
+}
+
+#six{
+float: right;
+width: 35%;
+height: 100%;
+background: #d396d3;
+margin-right: 5%;
+}
+
+.info{
+width: 100%;
+border-top: 2.4px solid #dcdcdc;
+border-bottom: 2.4px solid #dcdcdc;
+}
+
+.entity{
+display: inline;
+margin-top: 3%;
+}
+
+.type{
+display: inline;
+margin-left: 16%;
+margin-right: 2%;
+font-weight: bold;
+color: #8c8c8c;
+}
+
+.content{
+display: inline;
+font-weight: bold;
+}
+
+.resultArea{
+background-color: #F7F7F7;
+width: 100%;
+height: 297%;
+}
+
+.btns{
+display: inline;
+margin-right: 1%;
+}
+
+.btn{
+margin-top: 1%;
+display: inline;
+border-radius: 0;
+border: none;
+padding-right: 7%;
+padding-top: 0.5%;
+padding-bottom: 0.5%;
+background: #d2d2d2;
+font-weight: bold;
+}
+
+.subtitle{
+margin-left: 1%;
+color: #5a5a5a;
+}
+
+.hr{
+clear: both;
+border-bottom: 2px solid #dcdcdc;
+}
+
+
