--- a/client/src/styles/Result.css
+++ b/client/src/styles/Result.css
@@ -1,201 +1,274 @@
-.Result{
-    width:92%;
-    height:90vh;
-    /*display:flex;*/
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding-top: 100px;
-    margin:0% 4% 4% 4%;
+.Result {
+    width: 92%;
+    height: auto;
+    display: flex;
+    padding-top: 130px;
+    padding-bottom: 130px;
+    margin: 0% 4% 0% 4%;
+}
+
+.result_container {
+    background-color: white;
+    height: auto;
+    width: 80%;
+    margin: 0 auto;
+    padding: 25px;
+    flex-direction: column;
+    border-radius: 15px;
+    border: 3px solid #dcdcdcb4;
 }
 
 #title {
-width: 100%;
-height: 10%;
-margin-top: 2%;
+    width: 100%;
+    margin-left: 3%;
+    /* margin: 3%; */
+    /* margin-top: 2%;
 margin-left: 1.5%;
-margin-right: 1.5%;
-color: #5a5a5a;
+margin-right: 1.5%; */
+    /* color: #5a5a5a; */
 }
 
-#area {
-margin-top: 2%;
-margin-bottom: 2%;
+.info {
+    width: 100%;
+    border-top: 2.4px solid #dcdcdc;
+    border-bottom: 2.4px solid #dcdcdc;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+    margin-top: 3%;
 }
 
-#question{
-width: 100%;
-margin-top: 1.5%;
-margin-left: 1%;
-color: #8c8c8c;
-font-weight: bold;
+.entity {
+    display: inline;
+    margin-top: 3%;
 }
 
-#quesList{
-margin-left: 2%;
-margin-bottom: 2%;
+.type {
+    display: inline;
+    margin-left: 14%;
+    margin-right: 2%;
+    font-weight: bold;
+    color: #8c8c8c;
 }
 
-#quesContent{
-display: inline;
-margin-left: 0;
-padding-left: 0;
+.content {
+    display: inline;
+    font-weight: bold;
 }
 
-#vision{
-width: 100%;
-height: 17.5%;
-margin-bottom: 5%;
+/* 질문 띄우는 div */
+.questionArea {
+    width: 80%;
+    margin: 0 auto;
+    background-color: #F7F7F7;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-#interviewVideo{
-float: left;
-margin-left: 5%;
-width: 35%;
-height: 100%;
-background: #FFE6E6;
-margin-right: 5%;
+.btns {
+    font-weight: bold;
+    /* padding: 5px; */
+    padding-bottom: 15px;
+    margin-top: 10px;
+    font-size: 18px;
+    border-bottom: 3px solid white;
+    margin-bottom: 0;
 }
 
-#emotionGraph{
-float: right;
-width: 35%;
-height: 100%;
-background: #FDF5DC;
-margin-right: 5%;
+.btn {
+    margin-top: 1%;
+    display: inline;
+    border-radius: 0;
+    border: none;
+    padding-right: 7%;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+    background: #d2d2d2;
+    font-weight: bold;
 }
 
-#voice{
-width: 100%;
-height: 17.5%;
-margin-bottom: 5%;
+#question {
+    display: flex;
+    flex-direction: row;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-#one{
-float: left;
-margin-left: 5%;
-width: 35%;
-height: 100%;
-background: #FFE6E6;
-margin-right: 5%;
+#quesList {
+    margin-left: 2%;
+    margin-bottom: 2%;
 }
 
-#two{
-float: right;
-width: 35%;
-height: 100%;
-background: #FDF5DC;
-margin-right: 5%;
+#quesContent {
+    display: inline;
+    margin-left: 0;
+    padding-left: 0;
 }
 
-#word{
-width: 100%;
-height: 17.5%;
-margin-bottom: 5%;
+/* 분석 결과 띄우는 div */
+.resultArea {
+    background-color: white;
+    border-radius: 15px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.subtitle {
+    font-size: 19px;
+    margin: 3%;
+    color: #5a5a5a;
+}
+
+/* 1. Vision Analysis */
+.vision {
+    background-color: white;
+    border-radius: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    flex-direction: column;
+    height: auto;
+}
+
+.analyzeimage {
+    overflow: hidden;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#interviewVideo {
+    float: left;
+    margin-left: 11%;
+    width: 35%;
+    height: 360px;
+    /* background: #FFE6E6; */
+    background-image: url(/public/example.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#emotionGraph {
+    float: right;
+    margin-right: 11%;
+    width: 35%;
+    height: 360px;
+    background-image: url(/public/example2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.Explanation {
+    width: 80%;
+    margin: 0 auto;
+    border-radius: 20px;
+    background-color: #F7F7F7;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+    color: #5a5a5a;
+}
+
+#explanation-header {
+    font-size: 13pt;
+    font-weight: bold;
+}
+
+#explanation-contenet {
+    font-size: 12pt;
+    white-space: pre-line;
+}
+
+
+/* 2. 음성분석 */
+#voice {
+    width: 100%;
+    margin-bottom: 5%;
+}
+
+#one {
+    float: left;
+    margin-left: 11%;
+    width: 35%;
+    height: 360px;
+    background: #fff1e6;
+}
+
+#two {
+    float: right;
+    margin-right: 11%;
+    width: 35%;
+    height: 360px;
+    background: #ddf9d6;
+}
+
+
+/* 3. Word Frequency */
+#word {
+    width: 100%;
+    margin-bottom: 5%;
 }
 
 #explain {
-margin-left: 2%;
-margin-bottom: 4%;
-color: #a0a0a0;
-font-weight: bold;
+    margin-left: 3%;
+    margin-bottom: 4%;
+    color: #a0a0a0;
+    font-weight: bold;
 }
 
-#three{
-float: left;
-margin-left: 5%;
-width: 35%;
-height: 100%;
-background: #FFEAD0;
-margin-right: 5%;
-margin-bottom: 2%;
+#three {
+    float: left;
+    margin-left: 11%;
+    width: 35%;
+    height: 360px;
+    background: #f8e6ff;
 }
 
-#four{
-float: right;
-width: 35%;
-height: 100%;
-background: #EBFFEB;
-margin-right: 5%;
-}
-
-#pitch{
-width: 100%;
-height: 17.5%;
-margin-bottom: 5%;
-}
-
-#five{
-float: left;
-margin-left: 5%;
-width: 35%;
-height: 100%;
-background: #E0EBFF;
-margin-right: 5%;
-}
-
-#six{
-float: right;
-width: 35%;
-height: 100%;
-background: #d396d3;
-margin-right: 5%;
-}
-
-.info{
-width: 100%;
-border-top: 2.4px solid #dcdcdc;
-border-bottom: 2.4px solid #dcdcdc;
-}
-
-.entity{
-display: inline;
-margin-top: 3%;
-}
-
-.type{
-display: inline;
-margin-left: 16%;
-margin-right: 2%;
-font-weight: bold;
-color: #8c8c8c;
-}
-
-.content{
-display: inline;
-font-weight: bold;
-}
-
-.resultArea{
-background-color: #F7F7F7;
-width: 100%;
-height: 297%;
-}
-
-.btns{
-display: inline;
-margin-right: 1%;
-}
-
-.btn{
-margin-top: 1%;
-display: inline;
-border-radius: 0;
-border: none;
-padding-right: 7%;
-padding-top: 0.5%;
-padding-bottom: 0.5%;
-background: #d2d2d2;
-font-weight: bold;
-}
-
-.subtitle{
-margin-left: 1%;
-color: #5a5a5a;
-}
-
-.hr{
-clear: both;
-border-bottom: 2px solid #dcdcdc;
+#four {
+    float: right;
+    margin-right: 11%;
+    width: 35%;
+    height: 360px;
+    background: #FDF5DC;
 }
 
 
+/* 4. Voice Fitch */
+#pitch {
+    width: 100%;
+    margin-bottom: 5%;
+}
+
+#five {
+    float: left;
+    margin-left: 11%;
+    width: 35%;
+    height: 360px;
+    background: #ebc2c2;
+}
+
+#six {
+    float: right;
+    margin-right: 11%;
+    width: 35%;
+    height: 360px;
+    background: #dcfdf5;
+}
+
+.hr {
+    clear: both;
+    border-bottom: 2px solid #dcdcdc;
+}
