--- a/client/src/styles/Result.css
+++ b/client/src/styles/Result.css
@@ -1,266 +1,315 @@
+hr {
+  border-width: 1.5px;
+  border-style: solid;
+  border-color: #dcdcdcb4;
+}
+
 .Result {
-    width: 92%;
-    height: auto;
-    display: flex;
-    padding-top: 130px;
-    padding-bottom: 130px;
-    margin: 0% 4% 0% 4%;
+  width: 92%;
+  height: auto;
+  display: flex;
+  padding-top: 130px;
+  padding-bottom: 130px;
+  margin: 0% 4% 0% 4%;
 }
 
 .result_container {
-    background-color: white;
-    height: auto;
-    width: 80%;
-    margin: 0 auto;
-    padding: 25px;
-    flex-direction: column;
-    border-radius: 15px;
-    border: 3px solid #dcdcdcb4;
+  background-color: white;
+  height: auto;
+  width: 80%;
+  margin: 0 auto;
+  padding: 25px;
+  flex-direction: column;
+  border-radius: 15px;
+  border: 3px solid #dcdcdcb4;
 }
 
 #title {
-    width: 100%;
-    margin-left: 3%;
-    /* margin: 3%; */
-    /* margin-top: 2%;
+  width: 100%;
+  margin-left: 3%;
+  /* margin: 3%; */
+  /* margin-top: 2%;
 margin-left: 1.5%;
 margin-right: 1.5%; */
-    /* color: #5a5a5a; */
+  /* color: #5a5a5a; */
 }
 
 .info {
-    width: 100%;
-    border-top: 2.4px solid #dcdcdc;
-    border-bottom: 2.4px solid #dcdcdc;
-    padding-top: 2.5%;
-    padding-bottom: 2.5%;
-    margin-top: 3%;
+  width: 100%;
+  border-top: 2.4px solid #dcdcdc;
+  border-bottom: 2.4px solid #dcdcdc;
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
+  margin-top: 3%;
 }
 
 .entity {
-    display: inline;
-    margin-top: 3%;
+  display: inline;
+  margin-top: 3%;
 }
 
 .type {
-    display: inline;
-    margin-left: 14%;
-    margin-right: 2%;
-    font-weight: bold;
-    color: #8c8c8c;
+  display: inline;
+  margin-left: 10%;
+  margin-right: 2%;
+  font-weight: bold;
+  color: #8c8c8c;
 }
 
 .content {
-    display: inline;
-    font-weight: bold;
+  display: inline;
+  font-weight: bold;
 }
 
 .Explanation {
-    width: 80%;
-    margin: 0 auto;
-    border-radius: 20px;
-    background-color: #F7F7F7;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
-    color: #5a5a5a;
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 20px;
+  background-color: #f7f7f7;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
+  color: #5a5a5a;
 }
 
 #explanation-header {
-    font-size: 13pt;
-    font-weight: bold;
+  font-size: 13pt;
+  font-weight: bold;
 }
 
 #explanation-contenet {
-    font-size: 12pt;
-    white-space: pre-line;
+  font-size: 12pt;
+  white-space: pre-line;
 }
 
 /* 질문 띄우는 div */
-.questionArea {
-    width: 80%;
-    margin: 0 auto;
-    border-radius: 20px;
-    background-color: #F7F7F7;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
-    color: #5a5a5a;
+/* .questionArea {
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 20px;
+  background-color: #f7f7f7;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
+  color: #5a5a5a;
 }
 
 #questionArea-header {
-
-    /* padding: 13px; */
-    /* ;
-    margin-top: 10px; */
     padding-bottom: 10px;
     font-size: 13pt;
     font-weight: bold;
     border-bottom: 3px solid white;
     margin-bottom: 0;
-}
-
-#questionArea-contenet {
+  }
+  
+  #questionArea-content {
     display: flex;
     flex-direction: row;
     padding-top: 15px;
     padding-bottom: 10px;
+  } */
 
+.questionArea {
+  margin: 0 auto;
+  border-radius: 20px;
+  background-color: #f7f7f7;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 25px;
+  padding-right: 25px;
+  color: #5a5a5a;
+  text-align: center;
+}
+
+#questionArea-content {
+  font-size: 15pt;
+  font-weight: bold;
 }
 
 .btns {
-    font-weight: bold;
-    /* padding: 5px; */
-    padding-bottom: 15px;
-    margin-top: 10px;
-    font-size: 18px;
-    border-bottom: 3px solid white;
-    margin-bottom: 0;
+  font-weight: bold;
+  /* padding: 5px; */
+  padding-bottom: 15px;
+  margin-top: 10px;
+  font-size: 18px;
+  border-bottom: 3px solid white;
+  margin-bottom: 0;
 }
 
 .btn {
-    margin-top: 1%;
-    display: inline;
-    border-radius: 0;
-    border: none;
-    padding-right: 7%;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
-    background: #d2d2d2;
-    font-weight: bold;
+  margin-top: 1%;
+  display: inline;
+  border-radius: 0;
+  border: none;
+  padding-right: 7%;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  background: #d2d2d2;
+  font-weight: bold;
 }
 
 /* 분석 결과 띄우는 div */
 .resultArea {
-    background-color: white;
-    border-radius: 15px;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
+  background-color: white;
+  border-radius: 15px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 .subtitle {
-    font-size: 19px;
-    margin: 3%;
-    color: #5a5a5a;
+  font-size: 19px;
+  margin: 3%;
+  color: #5a5a5a;
 }
 
 /* 1. Vision Analysis */
 .vision {
-    background-color: white;
-    border-radius: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    flex-direction: column;
-    height: auto;
+  background-color: white;
+  border-radius: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  flex-direction: column;
+  height: auto;
 }
 
 .analyzeimage {
-    overflow: hidden;
-    padding-left: 20px;
-    padding-right: 20px;
+  overflow: hidden;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #interviewVideo {
-    float: left;
-    margin-left: 11%;
-    width: 35%;
-    height: 360px;
-    /* background: #FFE6E6; */
-    background-image: url(/public/example.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  float: left;
+  margin-left: 11%;
+  width: 35%;
+  height: 360px;
+  background: #ffe6e6;
+  /* background-image: url(/public/example.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; */
 }
 
 #emotionGraph {
-    float: right;
-    margin-right: 11%;
-    width: 35%;
-    height: 360px;
+  float: right;
+  margin-right: 11%;
+  width: 35%;
+  height: 360px;
 }
 
-/* 2. 음성분석 */
-#voice {
-    width: 100%;
-    margin-bottom: 5%;
+/* 2. 시선처리 */
+#iris {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.irisdiv {
+  overflow: hidden;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 85%;
+  margin: auto;
+}
+
+#iris button {
+  font-size: 15px;
+  font-weight: bold;
+  width: 180px;
+  height: 30px;
+  border-radius: 10px;
+  background-color: rgba(244, 131, 102, 0.98);
+  color: #ffffff;
+  border: 0px;
+  display: inline;
+  margin-left: 20px;
+}
+
+#iris h3 {
+  display: inline;
 }
 
 #one {
-    float: left;
-    margin-left: 11%;
-    width: 35%;
-    height: 360px;
-    background: #fff1e6;
+  float: left;
+  width: 300px;
+  height: 300px;
+  background: #fff1e6;
 }
 
 #two {
-    float: right;
-    margin-right: 11%;
-    width: 35%;
-    height: 360px;
-    background: #ddf9d6;
+  float: right;
+  width: 300px;
+  height: 300px;
+  background: #ddf9d6;
 }
 
+.iriscanvas {
+  width: 100%;
+  height: 99%;
+  background: #ffffff;
+  border: 1px solid black;
+}
 
 /* 3. Word Frequency */
 #word {
-    width: 100%;
-    margin-bottom: 5%;
+  width: 100%;
+  margin-bottom: 5%;
 }
 
 #explain {
-    margin-left: 3%;
-    margin-bottom: 4%;
-    color: #a0a0a0;
-    font-weight: bold;
+  margin-left: 3%;
+  margin-bottom: 4%;
+  color: #a0a0a0;
+  font-weight: bold;
 }
 
 #three {
-    float: left;
-    margin-left: 11%;
-    width: 35%;
-    height: 360px;
-    background: #f8e6ff;
+  float: left;
+  margin-left: 11%;
+  width: 35%;
+  height: 360px;
+  background: #f8e6ff;
 }
 
 #wordgraph {
-    float: right;
-    margin-right: 11%;
-    width: 40%;
-    height: 360px;
+  float: right;
+  margin-right: 11%;
+  width: 40%;
+  height: 360px;
 }
 
 /* 4. Voice Fitch */
 #pitch {
-    width: 100%;
-    margin-bottom: 5%;
+  width: 100%;
+  margin-bottom: 5%;
 }
 
 #five {
-    float: left;
-    margin-left: 11%;
-    width: 35%;
-    /* height: 360px; */
+  float: left;
+  margin-left: 11%;
+  width: 35%;
+  /* height: 360px; */
 }
 
 #six {
-    float: right;
-    margin-right: 11%;
-    width: 35%;
-    height: 360px;
-    background: #dcfdf5;
+  float: right;
+  margin-right: 11%;
+  width: 35%;
+  height: 360px;
+  background: #dcfdf5;
 }
 
 .hr {
-    clear: both;
-    border-bottom: 2px solid #dcdcdc;
+  clear: both;
+  border-bottom: 2px solid #dcdcdc;
 }
