--- a/client/src/styles/Result.css
+++ b/client/src/styles/Result.css
@@ -24,14 +24,10 @@ hr {
   border: 3px solid #dcdcdcb4;
 }
 
-#title {
+/* 상단 이름, 검사일시, 분야 */
+#resulttitle {
   width: 100%;
-  margin-left: 3%;
-  /* margin: 3%; */
-  /* margin-top: 2%;
-margin-left: 1.5%;
-margin-right: 1.5%; */
-  /* color: #5a5a5a; */
+  margin-left: 4%;
 }
 
 .info {
@@ -41,80 +37,32 @@ margin-right: 1.5%; */
   padding-top: 2.5%;
   padding-bottom: 2.5%;
   margin-top: 3%;
+  text-align: center;
 }
 
 .entity {
   display: inline;
   margin-top: 3%;
+  padding-right: 6%;
+  padding-left: 6%;
 }
 
 .type {
   display: inline;
-  margin-left: 10%;
-  margin-right: 2%;
+  margin-right: 10px;
   font-weight: bold;
   color: #8c8c8c;
+  font-size: 18px;
 }
 
 .content {
   display: inline;
   font-weight: bold;
+  font-size: 18px;
 }
 
-.Explanation {
-  width: 80%;
-  margin: 0 auto;
-  border-radius: 20px;
-  background-color: #f7f7f7;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 25px;
-  padding-right: 25px;
-  color: #5a5a5a;
-}
 
-#explanation-header {
-  font-size: 13pt;
-  font-weight: bold;
-}
-
-#explanation-contenet {
-  font-size: 12pt;
-  white-space: pre-line;
-}
-
-/* 질문 띄우는 div */
-/* .questionArea {
-  width: 80%;
-  margin: 0 auto;
-  border-radius: 20px;
-  background-color: #f7f7f7;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 25px;
-  padding-right: 25px;
-  color: #5a5a5a;
-}
-
-#questionArea-header {
-    padding-bottom: 10px;
-    font-size: 13pt;
-    font-weight: bold;
-    border-bottom: 3px solid white;
-    margin-bottom: 0;
-  }
-  
-  #questionArea-content {
-    display: flex;
-    flex-direction: row;
-    padding-top: 15px;
-    padding-bottom: 10px;
-  } */
-
+/* 질문 출력 div */
 .questionArea {
   margin: 0 auto;
   border-radius: 20px;
@@ -134,29 +82,7 @@ margin-right: 1.5%; */
   font-weight: bold;
 }
 
-.btns {
-  font-weight: bold;
-  /* padding: 5px; */
-  padding-bottom: 15px;
-  margin-top: 10px;
-  font-size: 18px;
-  border-bottom: 3px solid white;
-  margin-bottom: 0;
-}
-
-.btn {
-  margin-top: 1%;
-  display: inline;
-  border-radius: 0;
-  border: none;
-  padding-right: 7%;
-  padding-top: 0.5%;
-  padding-bottom: 0.5%;
-  background: #d2d2d2;
-  font-weight: bold;
-}
-
-/* 분석 결과 띄우는 div */
+/* <분석 결과 전체를 담는 div> */
 .resultArea {
   background-color: white;
   border-radius: 15px;
@@ -165,50 +91,111 @@ margin-right: 1.5%; */
   flex-direction: column;
 }
 
+/* 분석제목 */
 .subtitle {
   font-size: 19px;
-  margin: 3%;
+  margin: 5%;
   color: #5a5a5a;
+  padding-left: 25px;
 }
 
-/* 1. Vision Analysis */
-.vision {
-  background-color: white;
-  border-radius: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  flex-direction: column;
-  height: auto;
-}
-
+/* 분석 이미지들*/
 .analyzeimage {
   overflow: hidden;
   padding-left: 20px;
   padding-right: 20px;
 }
 
-#interviewVideo {
+/* 분석-왼쪽div */
+.leftdiv {
   float: left;
-  margin-left: 11%;
-  width: 300px;
-  height: 350px;
-  background: #000000;
-  /* background-image: url(/public/example.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; */
+  margin-left: 9%;
+  width: 33%;
+  position: relative;
+  justify-content: center;
+  align-items: center;
 }
 
-#emotionGraph {
+.leftdiv::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+.inner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+/* 분석-오른쪽div */
+.rightdiv {
   float: right;
-  margin-right: 11%;
-  width: 35%;
-  height: 360px;
+  margin-right: 9%;
+  width: 33%;
+  position: relative;
+  justify-content: center;
+  align-items: center;
 }
 
-/* 2. 시선처리 */
+.rightdiv::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+/* 해석 출력 div */
+.Explanation {
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 20px;
+  background-color: #f7f7f7;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
+  color: #5a5a5a;
+}
+
+.explanation-header {
+  font-size: 14pt;
+  font-weight: bold;
+}
+
+.explanation-contenet {
+  font-size: 13.5pt;
+  white-space: pre-line;
+}
+
+/* 1. Vision Analysis */
+.vision {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+#interviewVideo {
+  position: relative;
+  width: 100%;
+  height: auto;
+  text-align: center;
+}
+
+#video {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+
+/* 2. 표정분석 */
+#face {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+/* 3. 시선처리 */
 #iris {
   width: 100%;
   margin-bottom: 5%;
@@ -239,74 +226,24 @@ margin-right: 1.5%; */
   display: inline;
 }
 
-#one {
-  float: left;
-  width: 300px;
-  height: 300px;
-  background: #fff1e6;
-}
-
-#two {
-  float: right;
-  width: 300px;
-  height: 300px;
-  background: #ddf9d6;
-}
-
 .iriscanvas {
+  position: absolute;
   width: 100%;
   height: 99%;
   background: #ffffff;
   border: 1px solid black;
 }
 
-/* 3. Word Frequency */
+/* 4. 단어 분석 */
 #word {
   width: 100%;
   margin-bottom: 5%;
 }
 
-#explain {
-  margin-left: 3%;
-  margin-bottom: 4%;
-  color: #a0a0a0;
-  font-weight: bold;
-}
-
-#three {
-  float: left;
-  margin-left: 11%;
-  width: 35%;
-  height: 360px;
-  background: #f8e6ff;
-}
-
-#wordgraph {
-  float: right;
-  margin-right: 11%;
-  width: 40%;
-  height: 360px;
-}
-
-/* 4. Voice Fitch */
-#pitch {
+/* 5. 목소리 분석 */
+#voice {
   width: 100%;
   margin-bottom: 5%;
-}
-
-#five {
-  float: left;
-  margin-left: 11%;
-  width: 35%;
-  /* height: 360px; */
-}
-
-#six {
-  float: right;
-  margin-right: 11%;
-  width: 35%;
-  height: 360px;
-  background: #dcfdf5;
 }
 
 .hr {
