--- a/client/src/styles/Result.css
+++ b/client/src/styles/Result.css
@@ -144,6 +144,28 @@ hr {
   padding-bottom: 100%;
 }
 
+
+.inner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#waveformdiv{
+  float: right;
+  margin-right: 9%;
+  width: 33%;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+  text-align: center;
+  padding-top: 50px;
+}
+#waveform{
+  display: inline-block;
+}
+
 /* 해석 출력 div */
 .Explanation {
   width: 80%;
