--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -2,7 +2,7 @@
     width:92%;
     height:90vh;
     display:flex;
-    padding-top: 100px;
+    /* padding-top: 100px; */
     margin:0% 4% 4% 4%;
 }
 
