--- a/client/src/styles/ResultList.css
+++ b/client/src/styles/ResultList.css
@@ -6,14 +6,13 @@ hr {
 
 .resultListPage {
   width: 92%;
-  padding-top: 100px;
-  margin: 0% 4% 4% 4%;
+  padding: 5% 4% 5% 4%;
+  margin: 0 auto;
 }
 
 #resultListPage_title {
   padding: 10px;
   width: 100%;
-  margin: 20px 0px 20px 0px;
   border-bottom: 2px solid #dcdcdc;
 }
 
